# wrappi

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: FindPAPI.cmake
docs/: _config.yml  index.md
include/: wrappi.h
include/wrappi/: base.h  branch.h  cache.h  cycles.h  enums.h  instructions.h  manager.h  misc.h  tlb.h
scripts/: numa_stream.py
src/: base.cpp  branch.cpp  cache.cpp  cycles.cpp  instructions.cpp  manager.cpp  misc.cpp  tlb.cpp
